--- a/apps/ui/templates/ui/index.html
+++ b/apps/ui/templates/ui/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Devlog UI</title>
-</head>
-<body>
-  <h1>Welcome to Devlog UI</h1>
-  <a href="{% url 'logout' %}">Logout</a>
-</body>
-</html>
+{% extends 'ui/base.html' %}
+{% block content %}
+<div id="content" class="container mb-4">
+  {% include 'ui/index_components/project_list.html' %}
+  {% include 'ui/index_components/sprint_list.html' %}
+  {% include 'ui/index_components/task_lists.html' %}
+</div>
+{% endblock %}
+    
