--- a/apps/ui/templates/ui/base.html
+++ b/apps/ui/templates/ui/base.html
@@ -23,7 +23,9 @@
         <h1>This is Devlog</h1>
       </div>
       <div id="nav" class="container mb-4">
+        {% if request.user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
+        {% endif %}
       </div>
       {% block content %}
 
