DEVL-33 set admin link to use target=_blank

--- a/apps/ui/templates/ui/base.html
+++ b/apps/ui/templates/ui/base.html
@@ -45,7 +45,7 @@
           
           {% if request.user.is_staff %}
             <span class="">
-              <a href="{% url 'admin:index' %}">ADMIN</a>
+              <a href="{% url 'admin:index' %}" target="_blank">ADMIN</a>
             </span>
           {% endif %}
         </div>
