--- a/apps/ui/templates/ui/project_components/open_sprints.html
+++ b/apps/ui/templates/ui/project_components/open_sprints.html
@@ -1,36 +1,43 @@
+{% load ui_tags %}
+<style>
+  .sprint-standout {
+    font-weight: bold;
+    background-color: lightgrey !important;
+  }
+</style>
 <div class="container mt-4">
   <h2>Open Sprints for Project: {{ project.name }}</h2>
 </div>
 
 <div class="container mt-4 mb-4">
-  <table class="table table-striped table-bordered">
-    <thead class="table-dark">
-      <th>Name</th>
-      <th>Started</th>
-      <th>Ended</th>
-      <th>Status</th>
-      <th>Leader</th>
-    </thead>
-    <tbody>
-      {% for sprint in project.sprint_set.all %}
-        <tr>
-          <td>{{ sprint.name }}</td>
-          <td>{{ sprint.started|default:'--' }}</td>
-          <td>{{ sprint.ended|default:'--' }}</td>
-          <td>{{ sprint.status }}</td>
-          <td>{{ sprint.leader }}</td>
-        </tr>
-        <tr>
-          <td colspan="5">
-            {% include 'ui/project_components/open_tasks.html' %}
-          </td>
-        </tr>
-        <tr>
-          <td colspan="5">
-            {% include 'ui/project_components/finished_tasks.html' %}
-          </td>
-        </tr>
-      {% endfor %}
-    </tbody>
+  <table class="table table-bordered">
+    {% for sprint in project.sprint_set.all|sprint_open_status %}
+      <thead class="table-dark">
+        <th>Name</th>
+        <th>Started</th>
+        <th>Ended</th>
+        <th>Status</th>
+        <th>Leader</th>
+      </thead>
+      <tbody>
+          <tr>
+            <td class="sprint-standout">{{ sprint.name }}</td>
+            <td class="sprint-standout">{{ sprint.started|default:'--' }}</td>
+            <td class="sprint-standout">{{ sprint.ended|default:'--' }}</td>
+            <td class="sprint-standout">{{ sprint.status }}</td>
+            <td class="sprint-standout">{{ sprint.leader }}</td>
+          </tr>
+          <tr>
+            <td colspan="5">
+              {% include 'ui/project_components/open_tasks.html' %}
+            </td>
+          </tr>
+          <tr>
+            <td colspan="5">
+              {% include 'ui/project_components/finished_tasks.html' %}
+            </td>
+          </tr>
+      </tbody>
+    {% endfor %}
   </table>
 </div>
