--- a/apps/ui/templates/ui/project_components/open_sprints.html
+++ b/apps/ui/templates/ui/project_components/open_sprints.html
@@ -15,7 +15,7 @@
       <thead class="table-dark">
         <th>Name</th>
         <th>Started</th>
-        <th>Ended</th>
+        <th>Ends On</th>
         <th>Status</th>
         <th>Leader</th>
         <th>Velocity</th>
@@ -25,11 +25,11 @@
           <tr>
             <td class="sprint-standout">{{ sprint.name }}</td>
             <td class="sprint-standout">{{ sprint.started|default:'--' }}</td>
-            <td class="sprint-standout">{{ sprint.ended|default:'--' }}</td>
+            <td class="sprint-standout">{{ sprint.end|default:'--' }}</td>
             <td class="sprint-standout">{{ sprint.status }}</td>
             <td class="sprint-standout">{{ sprint.leader }}</td>
             <td class="sprint-standout">{{ sprint.get_velocity }}</td>
-            <td class="sprint-standout">{% widthratio sprint.get_completion_pct 1 100 %}</td>
+            <td class="sprint-standout">{% widthratio sprint.get_completion_pct 1 100 %}%</td>
           </tr>
           <tr>
             <td colspan="5">
