--- a/apps/ui/templates/ui/project_components/open_tasks.html
+++ b/apps/ui/templates/ui/project_components/open_tasks.html
@@ -1,4 +1,9 @@
 {% load ui_tags %}
+<style>
+  h4 {
+    text-align: center;
+  }
+</style>
 <div class="container mt-4">
   <h4>Open Tasks</h4>
 </div>
