--- a/apps/ui/templates/ui/index_components/project_list.html
+++ b/apps/ui/templates/ui/index_components/project_list.html
@@ -1,5 +1,5 @@
 <div id="projects" class="container">
-  <h2>Project List</h2>
+  <h2 style="text-align: center;">Project List</h2>
   <table class="table table-striped table-bordered">
     <thead class="table-dark">
       <th>Name</th>
