--- a/apps/ui/templates/ui/index_components/sprint_list.html
+++ b/apps/ui/templates/ui/index_components/sprint_list.html
@@ -1,5 +1,6 @@
+{% load ui_tags %}
 <div class="container mt-4">
-  <h2>Open Sprints</h2>
+  <h2 style="text-align: center;">Open Sprints</h2>
 </div>
 
 <div class="container mt-4 mb-4">
@@ -14,7 +15,7 @@
     </thead>
     <tbody>
       {% for project in project_qs %}
-        {% for sprint in project.sprint_set.all %}
+        {% for sprint in project.sprint_set.all|sprint_open_status %}
           <tr>
             <td>{{ sprint.name }}</td>
             <td>{{ sprint.project.name }}</td>
