DEVL-25 Added a sprint detail page

--- a/apps/ui/templates/ui/base.html
+++ b/apps/ui/templates/ui/base.html
@@ -31,7 +31,7 @@
   <body>
     <div id="wrapper" class="container-fluid">
       <div id="header" class="container mt-4 mb-4">
-        <h1>This is Devlog</h1>
+        <h1>Your Devlog</h1>
       </div>
       {% if request.user.is_authenticated %}
         <div id="nav" class="container mb-4">
