DEVL-27 Added a task detail page

--- a/apps/ui/templates/ui/project.html
+++ b/apps/ui/templates/ui/project.html
@@ -3,6 +3,7 @@
 <div id="content" class="container mb-4">
   {% include 'ui/project_components/project_details.html' %}
   {% include 'ui/project_components/open_sprints.html' %}
+  {% include 'ui/project_components/project_backlog.html' %}
 </div>
 {% endblock %}
     
