--- a/apps/ui/templates/ui/base.html
+++ b/apps/ui/templates/ui/base.html
@@ -27,6 +27,9 @@
     #nav > span > a:hover {
       color: lightgrey;
     }
+    input, textarea, select {
+      border-radius: 7px;
+    }
   </style>
   <body>
     <div id="wrapper" class="container-fluid">
@@ -48,6 +51,7 @@
               <a href="{% url 'admin:index' %}" target="_blank">ADMIN</a>
             </span>
           {% endif %}
+
         </div>
       {% endif %}
       {% block content %}
