--- a/apps/ui/templates/ui/project_components/project_details.html
+++ b/apps/ui/templates/ui/project_components/project_details.html
@@ -1,6 +1,6 @@
 <div id="projects" class="container">
   <div class="container mt-4 mb-4">
-    <h2 style="text-align: center;">Project Details for {{ project.name }}</h2>
+    <h2 style="text-align: center;">Project Details for {{ project.name }} <a href="{% url 'ui-add-task-view' project.id %}" title="Add task for this project">+</a></h2>
   </div>
   
   <style>
