--- a/apps/ui/templates/ui/project_components/open_tasks.html
+++ b/apps/ui/templates/ui/project_components/open_tasks.html
@@ -26,13 +26,7 @@
     <tbody>
       {% for task in sprint.task_set.all|task_open_status  %}
       <tr>
-        <td>{{task.project.prefix|default:'N/A' }}-{{ task.id }}</td>
-        <td>{{ task.subject }}</td>
-        <td>{{ task.type }}</td>
-        <td>{{ task.effort }}</td>
-        <td>{{ task.created|date:"m/d/Y" }}</td>
-        <td>{{ task.status }}</td>
-        <td>{{ task.assigned_to }}</td>
+        {% include 'ui/shared_components/task_list.html' %}
         {% if request.resolver_match.url_name == 'ui-sprint-view' %}
           <td style="text-align: center; vertical-align: middle;">
             <a href="{% url 'ui-remove-task-from-sprint-view' sprint.id task.id %}"
