--- a/apps/ui/templates/ui/project_components/project_backlog.html
+++ b/apps/ui/templates/ui/project_components/project_backlog.html
@@ -18,13 +18,7 @@
     <tbody>
       {% for task in project.task_set.all|task_backlog:project.id|task_open_status  %}
       <tr>
-        <td>{{task.project.prefix|default:'N/A' }}-{{ task.id }}</td>
-        <td>{{ task.subject }}</td>
-        <td>{{ task.type }}</td>
-        <td>{{ task.effort }}</td>
-        <td>{{ task.created|date:"m/d/Y" }}</td>
-        <td>{{ task.status }}</td>
-        <td>{{ task.assigned_to }}</td>
+        {% include 'ui/shared_components/task_list.html' %}
       </tr>
       {% empty %}
       <tr>
