--- a/apps/ui/templates/ui/add_task.html
+++ b/apps/ui/templates/ui/add_task.html
@@ -35,6 +35,7 @@
             <p>{{ field.label }}</p>
             <p>{{ field }}</p>
         {% endfor %}
+        {{ add_task_form.media }}
         <p>
             <button type="submit" class="btn btn-success">Submit</button>
             
