DEVL-75 - Add Finished and Closed Sprints list to project detail page

--- a/apps/ui/templates/ui/project.html
+++ b/apps/ui/templates/ui/project.html
@@ -4,6 +4,8 @@
   {% include 'ui/project_components/project_details.html' %}
   {% include 'ui/project_components/open_sprints.html' %}
   {% include 'ui/project_components/project_backlog.html' %}
+  {% include 'ui/project_components/future_sprints.html' %}
+  {% include 'ui/project_components/closed_sprints.html' %}
 </div>
 {% endblock %}
     
