DEVL-69 Fixed bug; Improved Add Sprint ui

--- a/apps/ui/templates/ui/sprint_components/sprint_details.html
+++ b/apps/ui/templates/ui/sprint_components/sprint_details.html
@@ -23,6 +23,10 @@
       <td>{{ sprint.name }}</td>
     </tr>
     <tr>
+      <th>Description</th>
+      <td>{{ sprint.description }}</td>
+    </tr>
+    <tr>
       <th>Started</th>
       <td>{{ sprint.started }}</td>
     </tr>
