--- a/apps/ui/templates/ui/add_sprint.html
+++ b/apps/ui/templates/ui/add_sprint.html
@@ -2,41 +2,67 @@
 {% block content %}
 <style>
     table {
-        max-width: 40%;
+      max-width: 40%;
     }
 
     input[type=text] {
-        min-width: 50%;
+      min-width: 50%;
     }
 
     input[type=number] {
-        max-width: 60px;
+      max-width: 60px;
     }
 
     textarea {
-        min-width: 50%;
-        padding: 10px;
-        resize: both;
+      min-width: 50%;
+      padding: 10px;
+      resize: both;
     }
 
     input {
-        padding: 0.5rem;
+      padding: 0.5rem;
     }
 
     select {
-        padding: 0.5rem;
+      padding: 0.5rem;
     }
+
+    .submit-row {
+      margin-top: 2rem;
+    }
+
 </style>
 <div id="content" class="container mb-4">
     <h3>Start New Sprint</h3>
+    {% if add_sprint_form.errors %}
+      <div class="alert alert-danger">
+        {% for field_errors in add_sprint_form.errors.values %}
+          {% for error in field_errors %}
+            {{ error }}
+          {% endfor %}
+        {% endfor %}
+      </div>
+    {% endif %}
     <form action="" method="POST">
         {% csrf_token %}
         {% for field in add_sprint_form %}
-            <p>{{ field.label }}</p>
-            <p>{{ field }}</p>
+            <p class="form-field">
+                {{ field.label }}
+                {% if field.field.required %}
+                    <span class="text-danger">*</span>
+                {% endif %}
+                {% if field.errors %}
+                  <span class="text-danger">
+                    {{ field.errors|join:", " }}
+                  </span>
+                  {% endif %}<br>
+            </p>
+            <p>
+              {{ field }} 
+            </p>
         {% endfor %}
         {{ add_sprint_form.media }}
-        <p>
+        <p class="submit-row">
             <button type="submit" class="btn btn-success">Submit</button>
             
             <button class="btn btn-warning" onclick=window.location.href="{% url 'ui-index-view' %}">
