DEVL-77 - Fixed markdown preview issue for update sprints page

--- a/apps/ui/templates/ui/update_sprint.html
+++ b/apps/ui/templates/ui/update_sprint.html
@@ -35,6 +35,7 @@
             <p>{{ field.label }}</p>
             <p>{{ field }}</p>
         {% endfor %}
+        {{ update_sprint_form.media }}
         <p>
             <button type="submit" class="btn btn-success">Save</button>
             
