DEVL-46 - Created add category page

--- a/apps/ui/templates/ui/add_task.html
+++ b/apps/ui/templates/ui/add_task.html
@@ -32,7 +32,12 @@
     <form action="{% if sprint %}?sprint={{sprint.id}}{% endif %}" method="POST">
         {% csrf_token %}
         {% for field in add_task_form %}
-            <p>{{ field.label }}</p>
+            {% if field.label == 'Categories' %}
+            <p>{{ field.label }} <a href="{% url 'ui-add-category-view' project.id %}" title="Add category for this project">+</a></p>
+            {% else %}
+                <p>{{ field.label }}</p>
+            {% endif %}
+            
             <p>{{ field }}</p>
         {% endfor %}
         {{ add_task_form.media }}
