--- a/apps/ui/templates/ui/sprint_components/open_tasks.html
+++ b/apps/ui/templates/ui/sprint_components/open_tasks.html
@@ -24,7 +24,7 @@
     </thead>
 
     <tbody>
-      {% for task in sprint.task_set.all|task_open_status  %}
+      {% for task in sprint.tasks.all|task_open_status  %}
       <tr>
         {% include 'ui/shared_components/task_list.html' %}
         {% if request.resolver_match.url_name == 'ui-sprint-view' %}
